<resources>
    <string name="app_name">AuNzCoffee</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="brew_title_string">วิธีการชง</string>
    <string name="project_name_string">AuNzCoffee</string>
    <string name="about_detail_string">ระบบ \"AuNzCoffee\" เป็นระบบที่ถูกพัฒนาเพื่อเป็นตัวช่วยในการจดจำสูตรการชงกาแฟและชาต่างๆสำหรับผู้ที่ต้องการเปิดกิจการร้านกาแฟในอนาคต หรือสำหรับบุคคลทั่วไปที่ต้องการมีไว้ติดครัวเรือนที่บ้านก็ได้</string>
    <string name="about_string">About</string>
    <string name="todo">TODO</string>
    <string name="capuchino_button">คาปูชิโน่</string>
    <string name="share_coffee_text">Hello!! %1$s</string>
    <string name="share_item" />
    <string name="coffee_text">coffee</string>
    <string name="coffee_name_title">Coffee Name</string>
    <string name="ingrediant_text_title">ส่วนประกอบ</string>
    <string name="ingrediant_text">Ingrediant</string>
    <string name="num_ingrediant">num</string>
    <string name="brew_text">Brewing</string>
    <string name="add_button_text">เพิ่มเป็นรายการโปรด</string>
    <string name="detail_text">รายละเอียด</string>
    <string name="delete_all_text">ลบรายการทั้งหมด</string>
    <string name="title_choose_text">เลือกรายการ</string>
    <string name="coffee_choose_text">กาแฟ</string>
    <string name="tea_choose">ชา</string>
</resources>
