<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screens.About.AboutPage">

    <TextView
        android:id="@+id/aboutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="133dp"
        android:layout_marginBottom="49dp"
        android:text="@string/project_name_string"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="249dp"
        android:layout_height="143dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="80dp"
        android:background="@mipmap/ic_launcher"
        android:contentDescription="@string/todo"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/aboutDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutTitle" />

    <TextView
        android:id="@+id/aboutDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="260dp"
        android:text="@string/about_detail_string"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
</androidx.constraintlayout.widget.ConstraintLayout>