<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.title.TitleFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E8D270">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:text="@string/title_choose_text"
                android:textAlignment="center"
                android:textSize="50sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/titleBtn_coffee"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="85dp"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="85dp"
                android:text="@string/coffee_choose_text"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleText" />

            <Button
                android:id="@+id/titleBtn_tea"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="85dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="85dp"
                android:text="@string/tea_choose"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleBtn_coffee" />
        </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
